# hijri-datetime

./: .flake8  .pre-commit-config.yaml  Hijri Date System.py  HijriDate.py  LICENSE  MANIFEST.in  README.md  Unit tests for the Hijri Date System.py  clean_build_dirs.py  dev_notes.md  last.md  pyproject.toml
.github/workflows/: release.yml
src/hijri_datetime/: __init__.py  _version.py  constants.py  conversion.py  date.py  exceptions.py  untitled5.py
src/hijri_datetime/api/: __init__.py
src/hijri_datetime/api/aladhan/: get_api_day_data.py  get_api_month_data.py
src/hijri_datetime/api/aladhan/get/: fetch_gregorian_data.py  fetch_gregorian_month_data.py  fetch_hijri_data.py  fetch_hijri_month_data.py
src/hijri_datetime/api/aladhan/utils/: json_files_dict.py  process_one_day_date_data.py  safe_get.py
src/hijri_datetime/data/: __init__.py  date_loader.py
src/hijri_datetime/data copy/: calendar_converter.py  config_loader.py
src/hijri_datetime/data/date_dataset/: calendar_date_dataset.csv.xz  calendar_date_holidays_dataset.csv.xz
src/hijri_datetime/data/utils/: _load_hijri_holydays.py  _load_mapping_data.py
tests/: conftest.py
